// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogPostHeroBanner renders hero banner with title and subtitle 1`] = `
<section
  className="jsx-3898934121"
>
  <h1>
    Test title
  </h1>
  <h2>
    Test subtitle
  </h2>
</section>
`;

exports[`BlogPostHeroBanner renders hero banner with title only 1`] = `
<section
  className="jsx-3898934121"
>
  <h1>
    Test title
  </h1>
  
</section>
`;
